<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:background="@color/light_gray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title"
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            tools:text="Bangkok" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_temperature"
        style="@style/Header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/dark_red"
        app:layout_constraintBottom_toTopOf="@+id/txt_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="28\u00B0" />

    <TextView
        android:id="@+id/txt_icon_status"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txt_temperature"
        app:layout_constraintStart_toStartOf="@id/txt_temperature"
        tools:text="@string/rain" />

    <TextView
        android:id="@+id/txt_weather"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_temperature_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/clear_sky" />

    <TextView
        android:id="@+id/txt_temperature_length"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/h_31_l_23_" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_container"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_humidity_title"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toTopOf="@+id/txt_sunset_title"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/humidity" />

        <TextView
            android:id="@+id/txt_humidity_value"
            style="@style/Metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/txt_humidity_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_humidity_title"
            tools:text="44%" />

        <TextView
            android:id="@+id/txt_sunset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/dark_gray"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sunset" />

        <TextView
            android:id="@+id/txt_sunset_value"
            style="@style/Metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/txt_sunset_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_sunset_title"
            tools:text="6:10 PM" />

        <TextView
            android:id="@+id/txt_synced_at_title"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_sunset_title"
            tools:text="@string/synced_at" />


        <TextView
            android:id="@+id/txt_synced_at_value"
            style="@style/Metadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@+id/txt_synced_at_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_synced_at_title"
            tools:text="12:30 PM" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminateTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txt_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        style="@style/Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_loading"/>
    <ImageView
        android:id="@+id/img_error"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_server_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txt_title_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        style="@style/Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_error"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txt_subtitle_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cannot_reach_the_server"
        style="@style/Metadata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_error_msg"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>